<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:foreground="?android:attr/selectableItemBackground"
    android:stateListAnimator="@animator/touch_raise"
    app:cardCornerRadius="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_today"
            android:layout_width="80dp"
            android:layout_height="120dp"
            android:scaleType="centerCrop"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:text="@string/today_title"/>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_des"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:maxLines="3"
                android:padding="5dp"
                android:textColor="@color/ty_3a3a3a"
                android:textSize="14sp"
                tools:text="@string/today_des"/>


            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textColor="@color/ty_ff0097A7"
                android:textSize="16sp"
                tools:text="@string/today_lunar"/>
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
